Expand Java module Case Studies Batch A to production depth
Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>